# cinese-clone

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/application/commands/: add_photo_to_cache.py  clear_photo_cache.py  create_advertisement.py  create_category.py  create_top_up_request.py  create_user.py  read_community_url.py  read_rules_text.py  read_support_text.py  remove_photo_from_cache.py  send_to_admins.py  set_community_url.py  set_rules_text.py  set_start_text.py  set_support_text.py
src/application/common/: types.py
src/application/queries/: list_advertisements.py  list_categories.py  list_cities.py  read_advertisement_by_id.py  read_advertisements_count.py  read_community_url.py  read_current_user.py  read_rules_text.py  read_start_text.py  read_support_text.py  read_top_up_request_by_id.py
src/domain/entities/: advertisement.py  advertisement_photo.py  base.py  category.py  city.py  top_up_request.py  user.py
src/domain/enums/: advertisement_status.py  advertisement_type.py  delivery_option.py  product_condition.py  top_up_request_status.py  transaction_type.py
src/domain/exceptions/: advertisement.py  base.py  user.py
src/domain/value_objects/: advertisement_description.py  advertisement_id.py  advertisement_photo_id.py  advertisement_price.py  advertisement_title.py  base.py  category_hashtag.py  category_id.py  category_name.py  city_id.py  city_name.py  file_id.py  file_unique_id.py  is_phone_number_visible.py  top_up_request_amount.py  top_up_request_id.py  top_up_request_receipt_file_id.py  (+4 more)
src/infrastructure/: redis_provider.py
(+80 files in other folders)
