[project]
name = "project-jupyter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.5",
    "dishka>=1.6.0",
    "psycopg[binary]>=3.2.9",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.43",
]
